FindBugs importer progress